# vcpkg-example

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: main.cxx
tests/: CMakeLists.txt  fib-tests.cpp
